--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.example</groupId>
   <artifactId>cafe.project</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>LAST-SNAPSHOT</version>
   <build>
     <plugins>
       <plugin>
